--- a/index.html
+++ b/index.html
@@ -200,57 +200,30 @@
                 padding: 1.2rem;
                 margin-top: 0.5rem;
                 min-height: auto;
-                display: flex;
-                flex-direction: row;
-                align-items: center;
-                gap: 1rem;
-            }
-
-            .overlap-settings-text {
-                text-align: left;
-                flex: 1;
+                gap: 0.5rem;
             }
 
             .overlap-settings-text h2 {
                 font-size: 1.2rem;
-                margin-bottom: 0.5rem;
-                margin-top: 0;
+                margin-bottom: 0.2rem;
             }
 
             .overlap-settings-text p {
                 font-size: 0.85rem;
                 line-height: 1.4;
-                margin: 0;
+                margin-bottom: 0.3rem;
+                padding: 0 1rem;
             }
 
             .overlap-preview-image {
-                width: 100px;
+                width: 140px;
                 height: 60px;
-                margin: 0;
-                flex-shrink: 0;
+                margin: 0.3rem auto;
             }
 
             .overlap-preview-image img {
-                width: 100%;
-                height: 100%;
-                object-fit: contain;
-            }
-
-            /* iPhone SE など小さい画面用 */
-            @media (max-width: 360px) {
-                .tool-item.overlap-settings {
-                    padding: 1rem;
-                    gap: 0.8rem;
-                }
-
-                .overlap-preview-image {
-                    width: 80px;
-                    height: 50px;
-                }
-
-                .overlap-settings-text h2 {
-                    font-size: 1.1rem;
-                }
+                width: 70%;
+                height: 70%;
             }
 
             /* アニメーションの調整 */
