--- a/index.html
+++ b/index.html
@@ -199,31 +199,30 @@
                 text-align: center;
                 padding: 1.2rem;
                 margin-top: 0.5rem;
-                min-height: auto;
-                gap: 0.5rem;
+                min-height: 120px;
             }
 
             .overlap-settings-text h2 {
                 font-size: 1.2rem;
-                margin-bottom: 0.2rem;
+                margin-bottom: 0.5rem;
             }
 
             .overlap-settings-text p {
-                font-size: 0.85rem;
-                line-height: 1.4;
-                margin-bottom: 0.3rem;
-                padding: 0 1rem;
+                font-size: 0.8rem;
+                line-height: 1.6;
+                margin-bottom: 0.5rem;
+                opacity: 0.85;
+            }
+
+            .overlap-settings-text strong {
+                font-size: 0.75rem;
+                opacity: 0.9;
             }
 
             .overlap-preview-image {
                 width: 140px;
-                height: 60px;
-                margin: 0.3rem auto;
-            }
-
-            .overlap-preview-image img {
-                width: 70%;
-                height: 70%;
+                height: 80px;
+                margin: 0.5rem auto;
             }
 
             /* アニメーションの調整 */
@@ -252,6 +251,14 @@
 
             .tool-item p {
                 font-size: 0.8rem;
+            }
+
+            .overlap-settings-text p {
+                font-size: 0.75rem;
+            }
+
+            .overlap-settings-text strong {
+                font-size: 0.7rem;
             }
         }
 
