--- a/index.html
+++ b/index.html
@@ -199,7 +199,7 @@
                 text-align: center;
                 padding: 1.2rem;
                 margin-top: 0.5rem;
-                min-height: 70px;
+                min-height: 90px;
                 gap: 1rem;
             }
 
@@ -208,15 +208,14 @@
             }
 
             .overlap-settings-text h2 {
-                font-size: 1.1rem;
+                font-size: 1.2rem;
                 margin-bottom: 0.5rem;
-                white-space: nowrap;
             }
 
             .overlap-settings-text p {
-                font-size: 0.75rem;
+                font-size: 0.8rem;
                 line-height: 1.6;
-                margin-bottom: 0;
+                margin-bottom: 0.5rem;
                 opacity: 0.85;
                 white-space: nowrap;
             }
@@ -226,9 +225,9 @@
             }
 
             .overlap-settings-text strong {
-                font-size: 0.7rem;
+                font-size: 0.75rem;
                 opacity: 0.9;
-                margin-left: 0.5rem;
+                margin-left: 0.5em;
             }
 
             .overlap-preview-image {
@@ -278,16 +277,17 @@
             }
 
             .overlap-settings-text h2 {
-                font-size: 1rem;
+                font-size: 1.1rem;
+                margin-bottom: 0.3rem;
             }
 
             .overlap-settings-text p {
-                font-size: 0.7rem;
+                font-size: 0.75rem;
+                margin-bottom: 0.3rem;
             }
 
             .overlap-settings-text strong {
-                font-size: 0.65rem;
-                margin-left: 0.3rem;
+                font-size: 0.7rem;
             }
         }
 
