--- a/index.html
+++ b/index.html
@@ -195,16 +195,11 @@
             }
 
             .tool-item.overlap-settings {
-                grid-template-columns: 1.5fr 1fr;
+                grid-template-columns: 1fr;
                 text-align: center;
                 padding: 1.2rem;
                 margin-top: 0.5rem;
-                min-height: 90px;
-                gap: 1rem;
-            }
-
-            .overlap-settings-text {
-                text-align: left;
+                min-height: 120px;
             }
 
             .overlap-settings-text h2 {
@@ -213,29 +208,15 @@
             }
 
             .overlap-settings-text p {
-                font-size: 0.8rem;
+                font-size: 0.85rem;
                 line-height: 1.6;
                 margin-bottom: 0.5rem;
-                opacity: 0.85;
-                white-space: nowrap;
-            }
-
-            .overlap-settings-text br {
-                display: none;
-            }
-
-            .overlap-settings-text strong {
-                font-size: 0.75rem;
-                opacity: 0.9;
-                margin-left: 0.5em;
             }
 
             .overlap-preview-image {
                 width: 140px;
                 height: 80px;
-                margin: 0;
-                display: flex;
-                align-items: center;
+                margin: 0.5rem auto;
             }
 
             /* アニメーションの調整 */
@@ -264,30 +245,6 @@
 
             .tool-item p {
                 font-size: 0.8rem;
-            }
-
-            .tool-item.overlap-settings {
-                padding: 1rem;
-                gap: 0.8rem;
-            }
-
-            .overlap-preview-image {
-                width: 100px;
-                height: 60px;
-            }
-
-            .overlap-settings-text h2 {
-                font-size: 1.1rem;
-                margin-bottom: 0.3rem;
-            }
-
-            .overlap-settings-text p {
-                font-size: 0.75rem;
-                margin-bottom: 0.3rem;
-            }
-
-            .overlap-settings-text strong {
-                font-size: 0.7rem;
             }
         }
 
@@ -335,7 +292,8 @@
             <a href="settings/overlap.html" class="tool-item overlap-settings">
                 <div class="overlap-settings-text">
                     <h2>オーバーラップ設定</h2>
-                    <p>分割時の重なり幅を調整します。<br>
+                    <p>分割時の重なり幅を調整します。
+                        <br>
                         <strong>→ 分割イメージと詳細設定はこちら</strong>
                     </p>
                 </div>
