--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
         }
 
         .overlap-settings-text {
-            text-align: left;
+            text-align: center;
         }
 
         .overlap-settings-text h2 {
@@ -131,9 +131,10 @@
         }
 
         .overlap-settings-text p {
-            font-size: 0.95rem;
+            font-size: 0.9rem;
             line-height: 1.6;
             margin-bottom: 0.5rem;
+            white-space: nowrap;
         }
 
         .overlap-preview-image {
@@ -201,19 +202,21 @@
                 margin-top: 0.5rem;
                 min-height: 90px;
                 gap: 1rem;
+                align-items: flex-start;
+                padding-top: 0.8rem;
             }
 
             .overlap-settings-text {
-                text-align: left;
+                text-align: center;
             }
 
             .overlap-settings-text h2 {
-                font-size: 1rem;
+                font-size: 0.9rem;
                 margin-bottom: 0.5rem;
             }
 
             .overlap-settings-text p {
-                font-size: 0.8rem;
+                font-size: 0.75rem;
                 line-height: 1.6;
                 margin-bottom: 0.5rem;
             }
