--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
             color: var(--text-color);
             backdrop-filter: blur(10px);
             box-shadow: 0 10px 20px rgba(79, 70, 229, 0.05);
-            aspect-ratio: 4/3;
+            aspect-ratio: 2/1;
             display: flex;
             flex-direction: column;
             justify-content: center;
@@ -108,38 +108,43 @@
         /* オーバーラップ設定用の特別なスタイル */
         .tool-item.overlap-settings {
             grid-column: 1 / -1;
-            max-width: none;
+            max-width: 700px;
             aspect-ratio: auto;
-            padding: 1.5rem;
+            padding: 1rem 1.5rem;
             margin-top: 1rem;
+            margin-left: auto;
+            margin-right: auto;
             background: linear-gradient(135deg, rgba(79, 70, 229, 0.1), rgba(129, 140, 248, 0.1));
             border: 2px solid rgba(79, 70, 229, 0.2);
             display: grid;
-            grid-template-columns: 1.2fr 1fr;
-            gap: 2rem;
+            grid-template-columns: auto auto;
+            gap: 0.5rem;
             align-items: center;
+            justify-content: space-between;
         }
 
         .overlap-settings-text {
             text-align: left;
-            padding-left: 1rem;
+            max-width: 450px;
         }
 
         .overlap-settings-text h2 {
-            font-size: 1.5rem;
-            margin-bottom: 0.75rem;
-        }
-
-        .overlap-settings-text p {
-            font-size: 1rem;
-            line-height: 1.6;
+            font-size: 1.3rem;
             margin-bottom: 0.5rem;
         }
 
+        .overlap-settings-text p {
+            font-size: 0.9rem;
+            line-height: 1.6;
+            margin-bottom: 0.5rem;
+            max-width: 400px;
+        }
+
         .overlap-preview-image {
-            width: 240px;
-            height: 140px;
+            width: 120px;
+            height: 60px;
             position: relative;
+            margin-left: 0.5rem;
             margin-right: 1rem;
         }
 
@@ -148,6 +153,7 @@
             height: 100%;
             object-fit: contain;
             border-radius: 8px;
+            opacity: 0.9;
         }
 
         @media (max-width: 600px) {
@@ -288,10 +294,8 @@
             <a href="settings/overlap.html" class="tool-item overlap-settings">
                 <div class="overlap-settings-text">
                     <h2>オーバーラップ設定</h2>
-                    <p>分割時の重なり幅を調整します。
-                        分割された用紙の重なり具合を細かく設定できます。
-                        <br><br>
-                        <strong>→ 分割イメージと詳細設定はこちら</strong>
+                    <p>分割時の重なり幅を調整します<br>
+                        <strong>分割イメージと詳細設定はこちら</strong>
                     </p>
                 </div>
                 <div class="overlap-preview-image">
