--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
             color: var(--text-color);
             backdrop-filter: blur(10px);
             box-shadow: 0 10px 20px rgba(79, 70, 229, 0.05);
-            aspect-ratio: 2/1;
+            aspect-ratio: 3/2;
             display: flex;
             flex-direction: column;
             justify-content: center;
@@ -294,7 +294,7 @@
             <a href="settings/overlap.html" class="tool-item overlap-settings">
                 <div class="overlap-settings-text">
                     <h2>オーバーラップ設定</h2>
-                        <strong>分割イメージと詳細設定はこちら</strong>
+                        分割イメージと詳細設定はこちら
                     </p>
                 </div>
                 <div class="overlap-preview-image">
