--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-    <title>PDFファイル分割サイト</title>
+    <title>PDF分割サイト</title>
     <style>
         :root {
             --primary-color: #4f46e5;
