--- a/settings/overlap.html
+++ b/settings/overlap.html
@@ -10,6 +10,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;700&display=swap" rel="stylesheet">
     <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-2935851985522990"
      crossorigin="anonymous"></script>
+    <script src="../js/cookie-consent.js"></script>
     <style>
         body {
             font-family: 'Inter', -apple-system, BlinkMacSystemFont, sans-serif;
@@ -217,7 +218,7 @@
             transition: all 0.3s ease;
             margin: 1rem auto;
             display: block;
-            max-width: 300px;
+            max-width: 200px;
             width: 90%;
         }
 
@@ -327,10 +328,11 @@
             }
 
             .save-button {
-                width: 100%;
-                max-width: 90%;
+                width: 60%;
+                max-width: 150px;
                 margin: 1rem auto;
-                padding: 0.8rem 1.5rem;
+                padding: 0.8rem 1rem;
+                font-size: 0.95rem;
             }
 
             h1 {
