--- a/contact.html
+++ b/contact.html
@@ -8,6 +8,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;700&display=swap" rel="stylesheet">
     <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-2935851985522990" crossorigin="anonymous"></script>
+    <script src="js/cookie-consent.js"></script>
     <style>
         :root {
             --primary-color: #4f46e5;
