--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-    <title>PDF分割サイト</title>
+    <title>PDFファイル分割サイト</title>
     <style>
         :root {
             --primary-color: #4f46e5;
@@ -256,6 +256,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;700&display=swap" rel="stylesheet">
     <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-2935851985522990"
      crossorigin="anonymous"></script>
+    <script src="js/cookie-consent.js"></script>
 </head>
 <body>
     <div class="container">
