--- a/privacy.html
+++ b/privacy.html
@@ -8,6 +8,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;700&display=swap" rel="stylesheet">
     <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-2935851985522990" crossorigin="anonymous"></script>
+    <script src="js/cookie-consent.js"></script>
     <style>
         :root {
             --primary-color: #4f46e5;
@@ -226,12 +227,20 @@
                     <li>アクセス解析（Google Analytics）</li>
                 </ul>
                 <p>ブラウザの設定でCookieを無効にすることも可能ですが、一部機能が利用できなくなる可能性があります。</p>
+                <p>EUからアクセスされるユーザーの方へ：当サイトではEU一般データ保護規則（GDPR）に基づき、Cookieの使用について同意を求めています。</p>
             </div>
 
             <div class="policy-section">
                 <h2 class="policy-title">4. 広告について</h2>
                 <p>当サイトでは、第三者配信の広告サービス（Google AdSense）を利用しています。</p>
                 <p>このような広告配信事業者は、ユーザーの興味に応じた商品やサービスの広告を表示するため、当サイトや他サイトへのアクセスに関する情報（氏名、住所、メールアドレス、電話番号は含まれません）を使用することがあります。</p>
+                <p>Google AdSenseの広告配信プロセスの詳細については、<a href="https://policies.google.com/technologies/ads" target="_blank" rel="noopener noreferrer">Googleの広告に関するポリシー</a>をご確認ください。</p>
+                <p>広告のパーソナライズをオプトアウトする場合は、以下の方法があります：</p>
+                <ul>
+                    <li><a href="https://www.google.com/settings/ads" target="_blank" rel="noopener noreferrer">Googleの広告設定</a>でパーソナライズ広告を無効にする</li>
+                    <li><a href="http://www.aboutads.info/choices/" target="_blank" rel="noopener noreferrer">Network Advertising Initiative</a>のオプトアウトページで設定する</li>
+                    <li>ブラウザの設定でサードパーティCookieを無効にする</li>
+                </ul>
             </div>
 
             <div class="policy-section">
