--- a/settings/overlap.html
+++ b/settings/overlap.html
@@ -10,6 +10,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;700&display=swap" rel="stylesheet">
     <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-2935851985522990"
      crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="../css/cookie-consent.css">
     <script src="../js/cookie-consent.js"></script>
     <style>
         body {
@@ -446,6 +447,18 @@
             <a href="../contact.html">お問い合わせ</a>
         </div>
     </footer>
+    <!-- Cookie Consent -->
+    <div class="cookie-consent-banner" id="cookieConsent">
+        <div class="cookie-consent-content">
+            <div class="cookie-consent-text">
+                <p>当サイトでは、サービスの向上とユーザー体験の改善のためにCookieを使用しています。Cookieの使用には、広告のパーソナライズ化やアクセス解析が含まれます。詳しくは<a href="../privacy.html" style="color: var(--primary-color);">プライバシーポリシー</a>をご確認ください。</p>
+            </div>
+            <div class="cookie-consent-buttons">
+                <button class="cookie-consent-button cookie-consent-accept" onclick="acceptCookies()">同意する</button>
+                <button class="cookie-consent-button cookie-consent-reject" onclick="rejectCookies()">拒否する</button>
+            </div>
+        </div>
+    </div>
 
     <script>
         const slider = document.getElementById('overlap-slider');
