--- a/faq.html
+++ b/faq.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-    <title>よくある質問 - PDF分割サイト</title>
+    <title>お問い合わせ - PDF分割サイト</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;700&display=swap" rel="stylesheet">
@@ -58,26 +58,29 @@
         }
 
         .content {
-            max-width: 600px;
+            max-width: 700px;
             margin: 0 auto;
-        }
-
-        .faq-item {
-            margin-bottom: 2rem;
-            padding: 1.5rem;
-            background: rgba(255, 255, 255, 0.5);
-            border-radius: 12px;
-            box-shadow: 0 4px 6px rgba(0, 0, 0, 0.05);
+            padding: 1rem;
             box-sizing: border-box;
         }
 
-        .faq-question {
-            font-weight: 600;
-            margin-bottom: 1rem;
-            color: var(--primary-color);
+        .contact-info {
+            margin: 2rem 0;
+            padding: 2rem;
+            background: rgba(255, 255, 255, 0.5);
+            border-radius: 12px;
+            border: 1px solid rgba(255, 255, 255, 0.8);
         }
 
-        .faq-answer {
+        .contact-email {
+            font-size: 1.2rem;
+            color: var(--primary-color);
+            font-weight: 500;
+            margin: 1rem 0;
+        }
+
+        p {
+            margin: 1rem 0;
             line-height: 1.8;
         }
 
@@ -113,22 +116,22 @@
                 max-width: 100%;
             }
 
-            .faq-item {
-                padding: 1rem;
-                margin-bottom: 1rem;
+            .content {
+                padding: 0.5rem;
             }
 
-            .faq-question {
-                font-size: 1rem;
-            }
-
-            .faq-answer {
-                font-size: 0.9rem;
+            .contact-form {
+                height: 700px;
+                margin: 0.5rem 0;
             }
 
             h1 {
                 font-size: 1.5rem;
                 margin: 1rem 0;
+            }
+
+            p {
+                font-size: 0.9rem;
             }
 
             .footer-links {
@@ -145,6 +148,16 @@
                 padding: 1rem;
                 margin-top: 1rem;
             }
+        }
+
+        .contact-form {
+            width: 100%;
+            height: 600px;
+            border: none;
+            border-radius: 12px;
+            box-shadow: 0 4px 6px rgba(0, 0, 0, 0.05);
+            margin: 1rem 0;
+            box-sizing: border-box;
         }
 
         footer {
@@ -182,44 +195,71 @@
             color: var(--text-color);
             opacity: 0.5;
         }
+
+        @media (max-width: 600px) {
+            body {
+                padding: 12px;
+            }
+
+            .container {
+                padding: 1rem;
+                margin: 0;
+                border-radius: 12px;
+                width: 100%;
+                max-width: 100%;
+            }
+
+            .content {
+                padding: 0.5rem;
+            }
+
+            .contact-form {
+                height: 700px;
+                margin: 0.5rem 0;
+            }
+
+            h1 {
+                font-size: 1.5rem;
+                margin: 1rem 0;
+            }
+
+            p {
+                font-size: 0.9rem;
+            }
+
+            .footer-links {
+                flex-direction: column;
+                gap: 0.5rem;
+                width: 100%;
+            }
+
+            .footer-separator {
+                display: none;
+            }
+
+            footer {
+                padding: 1rem;
+                margin-top: 1rem;
+            }
+        }
     </style>
 </head>
 <body>
     <a href="index.html" class="back-button">← 戻る</a>
     <div class="container">
-        <h1>よくある質問</h1>
+        <h1>お問い合わせ</h1>
         <div class="content">
-            <div class="faq-item">
-                <div class="faq-question">Q. このサービスは無料で使えますか？</div>
-                <p class="faq-answer">はい、完全無料でご利用いただけます。アカウント登録も不要です。</p>
-            </div>
-
-            <div class="faq-item">
-                <div class="faq-question">Q. アップロードしたPDFファイルは安全ですか？</div>
-                <p class="faq-answer">はい、アップロードされたファイルは分割処理後に自動的に削除され、サーバーには保存されません。また、すべての通信はSSL暗号化で保護されています。</p>
-            </div>
-
-            <div class="faq-item">
-                <div class="faq-question">Q. どのようにPDFを分割するのですか？</div>
-                <p class="faq-answer">1. トップページから分割したいサイズの組み合わせを選択します<br>
-                2. PDFファイルをアップロードします<br>
-                3. 必要に応じて重なり幅を調整します<br>
-                4. 「分割してダウンロード」ボタンをクリックします</p>
-            </div>
-
-            <div class="faq-item">
-                <div class="faq-question">Q. 対応しているブラウザは？</div>
-                <p class="faq-answer">主要なブラウザ（Chrome、Firefox、Safari、Edge）の最新版に対応しています。iOSの場合は、Safariブラウザーでのご利用を推奨しています。</p>
-            </div>
-
-            <div class="faq-item">
-                <div class="faq-question">Q. 分割したPDFの画質は下がりませんか？</div>
-                <p class="faq-answer">いいえ、分割処理による画質の劣化はありません。元のPDFファイルと同じ画質を維持します。</p>
-            </div>
-
-            <div class="faq-item">
-                <div class="faq-question">Q. ファイルサイズの制限はありますか？</div>
-                <p class="faq-answer">はい、1ファイルあたり最大100MBまでのPDFファイルを処理できます。</p>
+            <div class="contact-info">
+                <div class="form-container">
+                    <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSfi1FjKbI1IhIIuJx1nO5ChI6MS1fIyBLigMk4uAi3XuC3PFg/viewform?embedded=true" 
+                            width="100%" 
+                            height="800" 
+                            frameborder="0" 
+                            marginheight="0" 
+                            marginwidth="0">
+                        読み込んでいます…
+                    </iframe>
+                </div>
             </div>
         </div>
     </div>
@@ -234,5 +274,19 @@
             <a href="contact.html">お問い合わせ</a>
         </div>
     </footer>
+    <!-- Cookie Consent -->
+    <link rel="stylesheet" href="css/cookie-consent.css">
+    <div class="cookie-consent-banner" id="cookieConsent">
+        <div class="cookie-consent-content">
+            <div class="cookie-consent-text">
+                <p>当サイトでは、サービスの向上とユーザー体験の改善のためにCookieを使用しています。Cookieの使用には、広告のパーソナライズ化やアクセス解析が含まれます。詳しくは<a href="privacy.html" style="color: var(--primary-color);">プライバシーポリシー</a>をご確認ください。</p>
+            </div>
+            <div class="cookie-consent-buttons">
+                <button class="cookie-consent-button cookie-consent-accept" onclick="acceptCookies()">同意する</button>
+                <button class="cookie-consent-button cookie-consent-reject" onclick="rejectCookies()">拒否する</button>
+            </div>
+        </div>
+    </div>
+    <script src="js/cookie-consent.js"></script>
 </body>
 </html>
