--- a/privacy.html
+++ b/privacy.html
@@ -223,29 +223,47 @@
                 <p>当サイトでは、サービスの利便性向上のために以下の目的でCookieを使用しています：</p>
                 <ul>
                     <li>ユーザー設定（重なり幅など）の保存</li>
-                    <li>Google AdSenseによる広告配信</li>
+                    <li>Google AdSenseによる広告配信（パーソナライズド広告を含む）</li>
                     <li>アクセス解析（Google Analytics）</li>
                 </ul>
-                <p>ブラウザの設定でCookieを無効にすることも可能ですが、一部機能が利用できなくなる可能性があります。</p>
-                <p>EUからアクセスされるユーザーの方へ：当サイトではEU一般データ保護規則（GDPR）に基づき、Cookieの使用について同意を求めています。</p>
+                <p>Cookieは、ブラウザの設定で無効にすることができます。ただし、一部機能が利用できなくなる可能性があります。</p>
+                <p>当サイトでは、EUの一般データ保護規則（GDPR）およびePrivacy指令に基づき、Cookieの使用について明示的な同意を求めています。</p>
+                <p>Cookieの使用に同意しない場合でも、基本的なサービスは利用可能です。ただし、一部の機能（広告のパーソナライズ化など）は制限されます。</p>
             </div>
 
             <div class="policy-section">
                 <h2 class="policy-title">4. 広告について</h2>
-                <p>当サイトでは、第三者配信の広告サービス（Google AdSense）を利用しています。</p>
-                <p>このような広告配信事業者は、ユーザーの興味に応じた商品やサービスの広告を表示するため、当サイトや他サイトへのアクセスに関する情報（氏名、住所、メールアドレス、電話番号は含まれません）を使用することがあります。</p>
+                <p>当サイトでは、第三者配信の広告サービス「Google AdSense」を利用しています。</p>
+                <p>広告配信事業者は、ユーザーの興味に応じた商品やサービスの広告を表示するため、当サイトや他サイトへのアクセスに関する情報（氏名、住所、メールアドレス、電話番号は含まれません）を使用することがあります。</p>
                 <p>Google AdSenseの広告配信プロセスの詳細については、<a href="https://policies.google.com/technologies/ads" target="_blank" rel="noopener noreferrer">Googleの広告に関するポリシー</a>をご確認ください。</p>
-                <p>広告のパーソナライズをオプトアウトする場合は、以下の方法があります：</p>
+                <p>広告のパーソナライズをオプトアウトする方法：</p>
                 <ul>
                     <li><a href="https://www.google.com/settings/ads" target="_blank" rel="noopener noreferrer">Googleの広告設定</a>でパーソナライズ広告を無効にする</li>
                     <li><a href="http://www.aboutads.info/choices/" target="_blank" rel="noopener noreferrer">Network Advertising Initiative</a>のオプトアウトページで設定する</li>
+                    <li>当サイトのCookie設定で「拒否する」を選択する</li>
                     <li>ブラウザの設定でサードパーティCookieを無効にする</li>
                 </ul>
+                <p>なお、広告ブロッカーなどのツールを使用している場合、一部の広告が表示されない可能性があります。</p>
             </div>
 
             <div class="policy-section">
                 <h2 class="policy-title">5. アクセス解析ツールについて</h2>
-                <p>当サイトでは、Googleによるアクセス解析ツール「Google Analytics」を利用しています。このGoogle Analyticsはトラフィックデータの収集のためにCookieを使用しています。このトラフィックデータは匿名で収集されており、個人を特定するものではありません。</p>
+                <p>当サイトでは、Googleによるアクセス解析ツール「Google Analytics」を利用しています。Google Analyticsはデータの収集のためにCookieを使用しています。このデータは匿名で収集されており、個人を特定するものではありません。</p>
+                <p>主な収集データ：</p>
+                <ul>
+                    <li>アクセス日時</li>
+                    <li>ブラウザの種類</li>
+                    <li>アクセス元の概略位置情報</li>
+                    <li>閲覧ページ</li>
+                    <li>滞在時間</li>
+                </ul>
+                <p>これらの情報は、当サイトのサービス向上のために利用されます。収集データからユーザー個人を特定することはできません。</p>
+                <p>Google Analyticsの詳細については、<a href="https://policies.google.com/privacy" target="_blank" rel="noopener noreferrer">Googleのプライバシーポリシー</a>をご確認ください。</p>
+                <p>Google Analyticsのデータ収集を無効にする方法：</p>
+                <ul>
+                    <li>当サイトのCookie設定で「拒否する」を選択する</li>
+                    <li><a href="https://tools.google.com/dlpage/gaoptout" target="_blank" rel="noopener noreferrer">Google Analytics オプトアウトアドオン</a>をインストールする</li>
+                </ul>
             </div>
 
             <div class="policy-section">
@@ -270,5 +288,19 @@
             <a href="contact.html">お問い合わせ</a>
         </div>
     </footer>
+    <!-- Cookie Consent -->
+    <link rel="stylesheet" href="css/cookie-consent.css">
+    <div class="cookie-consent-banner" id="cookieConsent">
+        <div class="cookie-consent-content">
+            <div class="cookie-consent-text">
+                <p>当サイトでは、サービスの向上とユーザー体験の改善のためにCookieを使用しています。Cookieの使用には、広告のパーソナライズ化やアクセス解析が含まれます。詳しくは<a href="privacy.html" style="color: var(--primary-color);">プライバシーポリシー</a>をご確認ください。</p>
+            </div>
+            <div class="cookie-consent-buttons">
+                <button class="cookie-consent-button cookie-consent-accept" onclick="acceptCookies()">同意する</button>
+                <button class="cookie-consent-button cookie-consent-reject" onclick="rejectCookies()">拒否する</button>
+            </div>
+        </div>
+    </div>
+    <script src="js/cookie-consent.js"></script>
 </body>
 </html>
